<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User name</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="required">Required!</string>
    <string name="login_success">Log in success</string>
    <string name="prefs_file" translatable="false">com.example.budgetbuddy.PREFERENCE_FILE_KEY</string>
    <string name="web_client_id" translatable="false">402318662717-ps1dmphb9gh1evnf1dkv3ehh2rpc9llt.apps.googleusercontent.com</string>
    <string name="balance">Balance</string>
    <string name="record">Records</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="categories">My Categories</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="open_nav" translatable="false">Open nav</string>
    <string name="close_nav" translatable="false">Close nav</string>
    <string name="new_balance">Enter your balance</string>
    <string name="incomes">Incomes</string>
    <string name="outgoings">Outgoings</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="new_record">New record</string>
    <string name="new_category">New category</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="this_month">This month:</string>
    <string name="forgotPass">I forgot my password</string>
    <string name="enter_concept">Please enter a concept</string>
    <string name="enter_amount">Please enter a amount</string>
    <string name="select_cat">Please select a category</string>
    <string name="no_categories">You need to create a category in order to add a record</string>
    <string name="enter_cat_name">Please enter a category name</string>
    <string name="select_cat_color">Please select a color</string>
    <string name="select_cat_icon">Please select an icon</string>
    <string name="delete_cat">Delete Category</string>
    <string name="delete_record">Delete Record</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="delete_account">Delete Account</string>
    <string name="updated_profile">Profile updated</string>
    <string name="deleted_account">Account deleted</string>
    <string name="pp_updated">Profile picture updated</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_email_reset_pass">Enter the email linked to your account</string>
    <string name="sent_email">Sent email</string>
    <string name="email_sent">Recovery email sent</string>
    <string name="accept">Accept</string>

</resources>