<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group>
        <item
            android:id="@+id/mb_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/mb_categories"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/categories" />

        <item
            android:id="@+id/mb_settings"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/settings" />
    </group>

    <item
        android:title = "">
        <menu>
            <item
                android:id="@+id/mb_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>