<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RecordsFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabRecordType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiIncomesRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomes" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiGastosRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outgoings" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabRecordDayMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerRecords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabRecordType"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiYearRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiMonthRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiWeekRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiDayRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecords"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabRecordDayMonth"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingBtAddRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:baselineAlignBottom="false"
            android:clickable="true"
            android:src="@drawable/baseline_add_24"
            app:backgroundTint="@color/light_blue"
            app:borderWidth="2dp"
            app:elevation="10dp"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/fab_3_rounded"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>